--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .env*
 volumes/
 
-
+*venv/*
 *.ipynb
 config.txt
 .ipynb_checkpoints
@@ -12,3 +12,5 @@ __pycache__
 __pycache__/
 *.py[cod]
 *$py.class
+
+notebooks/*
